refactor(BookingServiceImpl): cleaned up